force-app/main/default/objects/Opportunity/fields/Linen__c.field-meta.xml
<CustomField>
    <fullName>Linen__c</fullName>
    <label>Linen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Vertical__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apron</fullName>
            </value>
            <value>
                <fullName>Apron/Overcoat</fullName>
            </value>
            <value>
                <fullName>Apron/Over Coat</fullName>
            </value>
            <value>
                <fullName>Baby Pant</fullName>
            </value>
            <value>
                <fullName>Baby Shirt</fullName>
            </value>
            <value>
                <fullName>Bath Mat</fullName>
            </value>
            <value>
                <fullName>Bath Robe</fullName>
            </value>
            <value>
                <fullName>BathTowel</fullName>
            </value>
            <value>
                <fullName>Bath Towel</fullName>
            </value>
            <value>
                <fullName>Bed Sheet (Single)</fullName>
            </value>
            <value>
                <fullName>Black Coat</fullName>
            </value>
            <value>
                <fullName>Blanket</fullName>
            </value>
            <value>
                <fullName>Blazer</fullName>
            </value>
            <value>
                <fullName>Blouse</fullName>
            </value>
            <value>
                <fullName>Blue Bed Sheet</fullName>
            </value>
            <value>
                <fullName>Blue Pant</fullName>
            </value>
            <value>
                <fullName>Blue Pillow Cover</fullName>
            </value>
            <value>
                <fullName>Blue Shirt</fullName>
            </value>
            <value>
                <fullName>Boiler Suit</fullName>
            </value>
            <value>
                <fullName>Booties (grade C) (pair)</fullName>
            </value>
            <value>
                <fullName>Booties with rubber sole ( pairs) (Grade B)</fullName>
            </value>
            <value>
                <fullName>Capri</fullName>
            </value>
            <value>
                <fullName>Chair Cover</fullName>
            </value>
            <value>
                <fullName>Chef Cap</fullName>
            </value>
            <value>
                <fullName>Chef Coat</fullName>
            </value>
            <value>
                <fullName>Coat</fullName>
            </value>
            <value>
                <fullName>Cook Coat</fullName>
            </value>
            <value>
                <fullName>Cook Trouser</fullName>
            </value>
            <value>
                <fullName>Doctors Coat</fullName>
            </value>
            <value>
                <fullName>Doorman Coat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>