force-app/main/default/objects/Opportunity/fields/LoadCalculated__c.field-meta.xml
<CustomField>
    <fullName>LoadCalculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoadCalculated</label>
    <type>Checkbox</type>
</CustomField>