force-app/main/default/objects/Opportunity/fields/Machine_Capacity_for_Guest_Laundary__c.field-meta.xml
<CustomField>
    <fullName>Machine_Capacity_for_Guest_Laundary__c</fullName>
    <label>Machine Capacity for Guest Laundary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>