force-app/main/default/objects/Opportunity/fields/Machine_Dimensions_w_d_h_Space_Req__c.field-meta.xml
<CustomField>
    <fullName>Machine_Dimensions_w_d_h_Space_Req__c</fullName>
    <label>Machine Dimensions (w*d*h) -Space Req.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>