force-app/main/default/objects/Opportunity/fields/Machine_Installation_Floor_Level__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation_Floor_Level__c</fullName>
    <label>Machine Installation Floor Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower Basement</fullName>
            </value>
            <value>
                <fullName>GF</fullName>
            </value>
            <value>
                <fullName>1st / any other floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>