force-app/main/default/objects/Opportunity/fields/Machine_Installation_Floor_Level_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation_Floor_Level_Remarks__c</fullName>
    <label>Machine Installation Floor Level Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>