force-app/main/default/objects/Opportunity/fields/Max_height_of_washable_Glasses__c.field-meta.xml
<CustomField>
    <fullName>Max_height_of_washable_Glasses__c</fullName>
    <label>Glass Height in CM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>