force-app/main/default/objects/Opportunity/fields/Max_height_of_washable_Plate__c.field-meta.xml
<CustomField>
    <fullName>Max_height_of_washable_Plate__c</fullName>
    <label>Max Height of Washable Plates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>