force-app/main/default/objects/Opportunity/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Trouble</fullName>
            </value>
            <value>
                <fullName>Even Keel</fullName>
            </value>
            <value>
                <fullName>Overconfident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>