force-app/main/default/objects/Opportunity/fields/My_Position_vs_Competition__c.field-meta.xml
<CustomField>
    <fullName>My_Position_vs_Competition__c</fullName>
    <label>My Position vs. Competition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Only Alternative</fullName>
            </value>
            <value>
                <fullName>Front Runner</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Zero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>