force-app/main/default/objects/Opportunity/fields/Next_Follow_up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_up_Date_Time__c</fullName>
    <label>Next Follow-up Date/Time</label>
    <type>DateTime</type>
</CustomField>