force-app/main/default/objects/Opportunity/fields/No_of_Double_bed_Sheets_hr__c.field-meta.xml
<CustomField>
    <fullName>No_of_Double_bed_Sheets_hr__c</fullName>
    <label>No. of Double bed Sheets/hr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>