force-app/main/default/objects/Opportunity/fields/No_of_glass_in_a_day__c.field-meta.xml
<CustomField>
    <fullName>No_of_glass_in_a_day__c</fullName>
    <label>No. of glass in a day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>