force-app/main/default/objects/Opportunity/fields/No_of_glasses_per_hour__c.field-meta.xml
<CustomField>
    <fullName>No_of_glasses_per_hour__c</fullName>
    <label>No. of glasses per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>