force-app/main/default/objects/Opportunity/fields/No_of_Ironing_hours__c.field-meta.xml
<CustomField>
    <fullName>No_of_Ironing_hours__c</fullName>
    <label>No. of Ironing hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>