force-app/main/default/objects/Opportunity/fields/No_of_Plate_wash_up_to_12__c.field-meta.xml
<CustomField>
    <fullName>No_of_Plate_wash_up_to_12__c</fullName>
    <label>No of Plates Washed up to 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>