force-app/main/default/objects/Opportunity/fields/No_of_Plate_wash_up_to_18_Pocket_type_p__c.field-meta.xml
<CustomField>
    <fullName>No_of_Plate_wash_up_to_18_Pocket_type_p__c</fullName>
    <label>No of Plates wash up to 18</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>