force-app/main/default/objects/Opportunity/fields/No_of_plates_per_basket__c.field-meta.xml
<CustomField>
    <fullName>No_of_plates_per_basket__c</fullName>
    <label>No. of plates per basket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>