force-app/main/default/objects/Opportunity/fields/No_of_Single_sheets_hr__c.field-meta.xml
<CustomField>
    <fullName>No_of_Single_sheets_hr__c</fullName>
    <label>No. of Single sheets / hr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>