force-app/main/default/objects/Opportunity/fields/No_of_Tables_required__c.field-meta.xml
<CustomField>
    <fullName>No_of_Tables_required__c</fullName>
    <label>No. of Tables required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>