force-app/main/default/objects/Opportunity/fields/Operation_Parakram__c.field-meta.xml
<CustomField>
    <fullName>Operation_Parakram__c</fullName>
    <label>Operation Parakram</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operation_Parakram</valueSetName>
    </valueSet>
</CustomField>