force-app/main/default/objects/Opportunity/fields/Opportunity_location__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_location__c</fullName>
    <formula>Account.AccountLocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Location</label>
    <type>Text</type>
</CustomField>