force-app/main/default/objects/Opportunity/fields/Out_Put_Capacity_Max_Racks__c.field-meta.xml
<CustomField>
    <fullName>Out_Put_Capacity_Max_Racks__c</fullName>
    <label>Output Capacity ( Max) Racks/Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>