force-app/main/default/objects/Opportunity/fields/Peak_load_Glasses_hour__c.field-meta.xml
<CustomField>
    <fullName>Peak_load_Glasses_hour__c</fullName>
    <label>Peak load: Glasses/hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>