force-app/main/default/objects/Opportunity/fields/Place_in_Sales_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Place_in_Sales_Funnel__c</fullName>
    <label>Place in Sales Funnel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Universe</fullName>
            </value>
            <value>
                <fullName>Above</fullName>
            </value>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Best Few</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>