force-app/main/default/objects/Opportunity/fields/Plate_Diameter_Width_of_plate_in_cm__c.field-meta.xml
<CustomField>
    <fullName>Plate_Diameter_Width_of_plate_in_cm__c</fullName>
    <label>Plate Diameter /Width of plate in cm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>