force-app/main/default/objects/Opportunity/fields/Possible_Actions__c.field-meta.xml
<CustomField>
    <fullName>Possible_Actions__c</fullName>
    <label>Possible Actions</label>
    <type>TextArea</type>
</CustomField>