force-app/main/default/objects/Opportunity/fields/PreInstallationRequired__c.field-meta.xml
<CustomField>
    <fullName>PreInstallationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PreInstallationRequired</label>
    <type>Checkbox</type>
</CustomField>