force-app/main/default/objects/Opportunity/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <label>Product category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ILM</fullName>
                <label>Industrial Laundry Machine</label>
            </value>
            <value>
                <fullName>IDW</fullName>
                <label>Industrial Dishwasher</label>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>