force-app/main/default/objects/Opportunity/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <label>Product/Service</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>