force-app/main/default/objects/Opportunity/fields/Products_Lifecycle_Expired__c.field-meta.xml
<CustomField>
    <fullName>Products_Lifecycle_Expired__c</fullName>
    <formula>Lifecycle_Expiration_Date__c &lt;= TODAY() + 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Lifecycle Expired?</label>
    <type>Checkbox</type>
</CustomField>