force-app/main/default/objects/Opportunity/fields/Purchase_timeline__c.field-meta.xml
<CustomField>
    <fullName>Purchase_timeline__c</fullName>
    <label>Purchase Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-30 days</fullName>
            </value>
            <value>
                <fullName>31-60 days</fullName>
            </value>
            <value>
                <fullName>61-90 days</fullName>
            </value>
            <value>
                <fullName>greater than 90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>