force-app/main/default/objects/Opportunity/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPCG</fullName>
            </value>
            <value>
                <fullName>SEZ</fullName>
            </value>
            <value>
                <fullName>Deemed Exports</fullName>
            </value>
            <value>
                <fullName>Export Partner</fullName>
            </value>
            <value>
                <fullName>EOU/STP/EHTP/BTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>