force-app/main/default/objects/Opportunity/fields/Reason_if_others__c.field-meta.xml
<CustomField>
    <fullName>Reason_if_others__c</fullName>
    <label>Remark for Closed Won</label>
    <length>30</length>
    <type>Text</type>
</CustomField>