force-app/main/default/objects/Opportunity/fields/Reasons_for_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Closed_Lost__c</fullName>
    <label>Reasons for Closed Lost</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competition (Name to be specified)</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Not possible to install</fullName>
            </value>
            <value>
                <fullName>Past Experience</fullName>
            </value>
            <value>
                <fullName>Decision Makers choice</fullName>
            </value>
            <value>
                <fullName>Preference for imported product</fullName>
            </value>
            <value>
                <fullName>Budget restriction</fullName>
            </value>
            <value>
                <fullName>Warranty Terms</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>AMC Terms not agreed</fullName>
            </value>
            <value>
                <fullName>Invalid Product Requirement</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>