force-app/main/default/objects/Opportunity/fields/Reasons_for_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Closed_Won__c</fullName>
    <label>Reasons for Closed Won</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Brand Value</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Customer base/Referrals</fullName>
            </value>
            <value>
                <fullName>Past Experience</fullName>
            </value>
            <value>
                <fullName>Support provided in Purchase Process</fullName>
            </value>
            <value>
                <fullName>Technical Competency</fullName>
            </value>
            <value>
                <fullName>Product Features</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>