force-app/main/default/objects/Opportunity/fields/Reasons_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Visit__c</fullName>
    <label>Reasons for Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote/Technical document hard copy submission</fullName>
            </value>
            <value>
                <fullName>Commercial Negotiation - Self</fullName>
            </value>
            <value>
                <fullName>Technical Negotiation – Self</fullName>
            </value>
            <value>
                <fullName>Commercial Negotiation – Along with IFB’s Senior resource</fullName>
            </value>
            <value>
                <fullName>Technical Negotiation - Along with IFB’s Senior resource</fullName>
            </value>
            <value>
                <fullName>Post Site Inspection</fullName>
            </value>
            <value>
                <fullName>PO &amp; advance payment collection</fullName>
            </value>
            <value>
                <fullName>Advance payment collection</fullName>
            </value>
            <value>
                <fullName>Pre-Site Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>