force-app/main/default/objects/Opportunity/fields/Reasons_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Reasons_Remarks__c</fullName>
    <label>Remarks for Next Follow Up</label>
    <length>250</length>
    <type>Text</type>
</CustomField>