force-app/main/default/objects/Opportunity/fields/Recapture_Processed__c.field-meta.xml
<CustomField>
    <fullName>Recapture_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recapture Processed</label>
    <type>Checkbox</type>
</CustomField>