force-app/main/default/objects/Opportunity/fields/Red_Flags__c.field-meta.xml
<CustomField>
    <fullName>Red_Flags__c</fullName>
    <label>Red Flags</label>
    <type>TextArea</type>
</CustomField>