force-app/main/default/objects/Opportunity/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks for Closed Lost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>