force-app/main/default/objects/Opportunity/fields/Required_Intel_Water_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Required_Intel_Water_Pressure__c</fullName>
    <label>Required Intel  Water Pressure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>