force-app/main/default/objects/Opportunity/fields/Required_Power_Cable_Size_Rating__c.field-meta.xml
<CustomField>
    <fullName>Required_Power_Cable_Size_Rating__c</fullName>
    <label>Required Power Cable(Size/Rating)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>