force-app/main/default/objects/Opportunity/fields/Rescheduling_reasons__c.field-meta.xml
<CustomField>
    <fullName>Rescheduling_reasons__c</fullName>
    <label>Rescheduling reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer not available</fullName>
            </value>
            <value>
                <fullName>Meeting delayed with the previous customer</fullName>
            </value>
            <value>
                <fullName>Scheduled another important customer visit</fullName>
            </value>
            <value>
                <fullName>Natural Calamities</fullName>
            </value>
            <value>
                <fullName>Review schedule in IFB branch</fullName>
            </value>
            <value>
                <fullName>Corporate meeting/review in IFB Bommasandra Factory</fullName>
            </value>
            <value>
                <fullName>Personal Leave</fullName>
            </value>
            <value>
                <fullName>Visiting a Trade fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>