force-app/main/default/objects/Opportunity/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economic Buying Influence</fullName>
            </value>
            <value>
                <fullName>User Buying Influence</fullName>
            </value>
            <value>
                <fullName>Technical Buying Influence</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>