force-app/main/default/objects/Opportunity/fields/Sales_Person_Involved_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Involved_Name__c</fullName>
    <formula>Sales_Person_Involved__r.FirstName +&apos; &apos;+  Sales_Person_Involved__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Person Involved Name</label>
    <type>Text</type>
</CustomField>