force-app/main/default/objects/Opportunity/fields/Sales_Revenue_Units__c.field-meta.xml
<CustomField>
    <fullName>Sales_Revenue_Units__c</fullName>
    <label>Sales Revenue/Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>