force-app/main/default/objects/Opportunity/fields/SalesRevenueUnits__c.field-meta.xml
<CustomField>
    <fullName>SalesRevenueUnits__c</fullName>
    <label>Sales Revenue/Units</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>